--- a/IClothingApplication/Views/Customers/ViewAll.cshtml
+++ b/IClothingApplication/Views/Customers/ViewAll.cshtml
@@ -107,6 +107,7 @@
     <hr class="my-5" />
 
     <div class="action">
+        @Html.ActionLink("Previous Orders", "CustomerOldOrders", "Tools", null, new { @class = "btn btn-secondary me-1" })
         @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-secondary me-1" })
     </div>
 </div>
