--- a/IClothingApplication/Views/ShoppingCarts/ViewCart.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/ViewCart.cshtml
@@ -38,6 +38,9 @@
                     </td>
                     @if (item.productQty > item.Product.productQty)
                     {
+                        <td>
+                            $@Html.DisplayFor(modelItem => item.Product.productPrice)
+                        </td>
                         <td class="bg-danger bg-opacity-25 position-relative" title="Product Stock Currently Only @(item.Product.productQty)">
                             <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
                                 <span class="visually-hidden">Cart Issue</span>
@@ -49,7 +52,7 @@
                     {
                         total += item.productQty * item.Product.productPrice;
                         <td>
-                            @Html.DisplayFor(modelItem => item.Product.productPrice)
+                            $@Html.DisplayFor(modelItem => item.Product.productPrice)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.productQty)
