--- a/IClothingApplication/Views/Tools/BillingDetails.cshtml
+++ b/IClothingApplication/Views/Tools/BillingDetails.cshtml
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <p class="card-text">
-                            <strong>Status:</strong> @Html.DisplayFor(model => model.OrderStatus.status)<br>
+                            <strong>Status:</strong> @Html.DisplayFor(model => model.OrderStatus.currentStatus)<br>
                             <strong>Date:</strong> @Html.DisplayFor(model => model.OrderStatus.statusDate)<br>
                             <strong>Payment:</strong> $@sum<br>
                             <strong>Billing Address:</strong> @Html.DisplayFor(model => model.Customer.customerBillingAddress)<br>
