--- a/IClothingApplication/Views/OrderStatus/Delete.cshtml
+++ b/IClothingApplication/Views/OrderStatus/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.status)
+            @Html.DisplayNameFor(model => model.currentStatus)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.status)
+            @Html.DisplayFor(model => model.currentStatus)
         </dd>
 
         <dt>
