--- a/IClothingApplication/Views/OrderStatus/Edit.cshtml
+++ b/IClothingApplication/Views/OrderStatus/Edit.cshtml
@@ -15,13 +15,13 @@
         <h4>OrderStatus</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.statusID)
+        @Html.HiddenFor(model => model.cartID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.currentStatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.currentStatus, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.currentStatus, "", new { @class = "text-danger" })
             </div>
         </div>
 
