--- a/IClothingApplication/Views/Tools/CartDetails.cshtml
+++ b/IClothingApplication/Views/Tools/CartDetails.cshtml
@@ -21,7 +21,7 @@
             <h4 class="card-title text-center">@Html.DisplayFor(model => model.Customer.customerName)'s Order</h4>
             <hr />
             <p class="card-text">
-                <strong>Status:</strong> @Html.DisplayFor(model => model.OrderStatus.status)<br>
+                <strong>Status:</strong> @Html.DisplayFor(model => model.OrderStatus.currentStatus)<br>
                 <strong>Date:</strong> $@Html.DisplayFor(model => model.OrderStatus.statusDate)<br>
                 <strong>Payment:</strong> $@sum<br>
                 <strong>Quantity: </strong> @total @(total == 1 ? "Item" : "Items")<br> 
