--- a/IClothingApplication/Views/Tools/CustomerOldOrders.cshtml
+++ b/IClothingApplication/Views/Tools/CustomerOldOrders.cshtml
@@ -6,8 +6,6 @@
 
 <h2 class="text-center mt-3">Customer Old Orders</h2>
 
-@DateTime.Now
-
 @if (Model.Count() == 0)
 {
     <h3 class="mt-5 mx-auto text-center" style="font-weight:100">No Items Found</h3>
@@ -46,7 +44,7 @@ else
                     @Html.DisplayFor(modelItem => cart.OrderStatus.statusDate)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => cart.OrderStatus.status)
+                    @Html.DisplayFor(modelItem => cart.OrderStatus.currentStatus)
                 </td>
                 <td>
                     @total
@@ -55,10 +53,14 @@ else
                     $@sum
                 </td>
                 <td>
-                    @Html.ActionLink("Verify", "CartDetails", new { id = cart.cartID })
+                    @*@Html.ActionLink("Verify", "CartDetails", new { id = cart.cartID })*@
                 </td>
             </tr>
         }
 
     </table>
 }
+
+<div class="action">
+    @Html.ActionLink("Back", "ViewAll", "Customers", null, new { @class = "btn btn-secondary me-1" })
+</div>
