--- a/IClothingApplication/Views/UserComments/Create.cshtml
+++ b/IClothingApplication/Views/UserComments/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+@*<h2>Create</h2>*@
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Customer Comments</h4>
+        <h4>Send a Comment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group" hidden>
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group mt-3">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to Home", "Index", "Home")
+    @*@Html.ActionLink("Back to Home", "Index", "Home")*@
 </div>
 
 @section Scripts {
