--- a/IClothingApplication/Views/UserQueries/Create.cshtml
+++ b/IClothingApplication/Views/UserQueries/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+@*<h2>Create</h2>*@
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Customer Review</h4>
+        <h4>Send A Query</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group" hidden>
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group mt-3">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -49,7 +49,7 @@
 
 <!-- changed to have it go back to the CustomerDashboard -->
 <div>
-    @Html.ActionLink("Back to Customer Page", "CustomerDashboard", "Home")
+    @*@Html.ActionLink("Back to Customer Page", "CustomerDashboard", "Home")*@
 </div>
 
 @section Scripts {
