Last Minute Fixes

--- a/IClothingApplication/Views/Home/AdminDashboard.cshtml
+++ b/IClothingApplication/Views/Home/AdminDashboard.cshtml
@@ -11,6 +11,11 @@
     </div>
 
     <div class="col-md-4">
+        <h2>@Html.ActionLink("Manage Shipping", "AdminShippingManager", "Tools", null, new { @class = "btn btn-secondary me-1" })</h2>
+        <p>Manage the shipping of orders</p>
+    </div>
+
+    <div class="col-md-4">
         <h2>@Html.ActionLink("Manage Database", "AdminManagementDashboard", "Home", null, new { @class = "btn btn-secondary me-1" })</h2>
         <p>Links to Manage the Database Tables</p>
     </div>
