--- a/IClothingApplication/Views/ShoppingCarts/Billing.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/Billing.cshtml
@@ -27,7 +27,7 @@
                         <div class="col-md-6">
                             <p class="card-text">
                                 <strong>Card Number:</strong> @Html.DisplayFor(model => model.cardNumber)<br>
-                                <strong>Expiration Date:</strong> $@Html.DisplayFor(model => model.expirationDate)<br>
+                                <strong>Expiration Date:</strong> @Html.DisplayFor(model => model.expirationDate)<br>
                                 <strong>CVV:</strong> @Html.DisplayFor(model => model.cvv)<br>
                                 <strong>Billing Date:</strong> @Html.DisplayFor(model => model.billingDate)<br>
                             </p>
