--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -18,11 +18,14 @@
 
 <br />
 
-
-
 <br />
 
 <div class="pt-1 sticky-top bg-white" style="z-index:1">
+    @if (Session["UserType"] == "admin")
+    {
+        @Html.ActionLink("Add Product", "Create", null, new { @class = "btn btn-primary mx-2 w-100" })
+
+    }
     <div class="d-flex justify-content-between align-items-end p-1 mt-2 align-items-center" style="height:min-content">
         <a class="h6 text-dark" data-bs-toggle="collapse" href="#filterCollapse" role="button" aria-expanded="false" aria-controls="filterCollapse">
             Filters
@@ -120,7 +123,7 @@
         @foreach (var item in Model)
         {
             <div class="col mb-4">
-                <div class="card" style="height: 700px">
+                <div class="card" style="height: @(Session["UserType"] == "admin" ? 725 : 700)px">
                     <img style="height: 450px; object-fit: cover; border-radius: var(--bs-card-inner-border-radius) 0 0 var(--bs-card-inner-border-radius)" src="~/Images/@(System.IO.File.Exists(Server.MapPath("~/Images/Products/" + item.productName + ".jpg")) ? "Products/" + item.productName + ".jpg" : "placeholder.jpg")" class="card-img-top" alt="Card Image">
                     <div class="card-body d-grid">
                         @*<h5 class="card-title">@Html.ActionLink(item.productName, "Details", new { id = item.productID }, new { @class = "text-dark" })</h5>*@
