--- a/IClothingApplication/Views/UserBillings/Edit.cshtml
+++ b/IClothingApplication/Views/UserBillings/Edit.cshtml
@@ -90,5 +90,12 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @if (Session["UserType"] == "customer")
+    {
+        @Html.ActionLink("Back to List", "ViewAll", "Customers")
+    }
+    else
+    {
+        @Html.ActionLink("Back to List", "Index")
+    }
 </div>
