--- a/IClothingApplication/Views/UserPasswords/Create.cshtml
+++ b/IClothingApplication/Views/UserPasswords/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.customerID, "customerID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("customerID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("customerID", null, "none", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.customerID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.adminID, "adminID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("adminID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("adminID", null, "none", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.adminID, "", new { @class = "text-danger" })
             </div>
         </div>
